Adjust bet detail winner list css, Adjust description overflow css, Fixed display winner list issue, Adjust bet overview title

--- a/WagerMate/Components/Pages/Bet-overview.razor.css
+++ b/WagerMate/Components/Pages/Bet-overview.razor.css
@@ -246,6 +246,9 @@ p{
 }
 
 .bet-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 5px;
@@ -292,8 +295,6 @@ p{
     padding: 6px;
     border-radius: 10px;
 }
-
-
 
 #h2PopUpCreateNewBet {
     background-image: linear-gradient(180deg, rgb(255, 94, 0) 0%, #FF8000 70%);
@@ -411,8 +412,17 @@ p{
     color: #333;
 }
 
+.detail-value-description{
+    overflow: auto;
+    word-wrap: break-word;
+    min-height: 1em;
+    max-height: 3em;
+    margin-left: 4em;
+}
+
 .detail-value {
     color: #555;
+    align-self: start;
 }
 
 .winnerList {
